# 2800-202410-BBY13

./: .gitignore  README.md  about.html  databaseConnection.js  index.html  index.js  index.js.orig  package-lock.json  package.json
calendar/: calendar.js  server.js
database/: databaseConnection.js  mongooseConnection.js  reset-database.js
database_conection_llm/: main.py  requirements.txt  sample.txt  test.py
datasets/: formatted_fixed_data_for_training.jsonl  h41-80.jsonl
entities-extraction-web-scraper/: .gitignore  README.md  ai_extractor.py  checkpoint.txt  config.py  gpt_processor.py  main.py  output.jsonl  parse_urls.py  pyproject.toml  schemas.py  urls_list.txt  utils.py
entities-extraction-web-scraper/web_scraper/: pyvenv.cfg
fine_tunning/: main.py  originalModel_main.py  push_to_hf_hub.py  test_model.py
modules/: bookAppointment.js  chatModuleDB.js  sample.txt
schemas/: courses.js  instructors.json
scripts/: databaseConnection.js
styles/: navbar.css
templates/: footer.ejs  header.ejs
view/: signup.ejs
views/: 404.ejs  admission.ejs  appointmentConfirmed.ejs  bookAppointment.ejs  calendar.ejs  calendar.ejs.orig  chatPage.ejs  chatpage.ejs  contact.ejs  errorMessage.ejs  homePage.ejs  homepage.ejs  incorrect_password.ejs  loggedin.ejs  login.ejs  login_error.ejs  not_logged_in.ejs  not_registered.ejs  notloggedin.ejs  p&g.ejs  resetPassword.ejs  resetPasswordRequest.ejs  reset_password.ejs  reset_password_invalid_token.ejs  reset_password_request.ejs  signup.ejs  signupErr.ejs  startingPage.ejs  stuServices.ejs  userProfile.ejs  (+2 more)
(+35 files in other folders)
