[tool.poetry]
name = "entities-extraction-web-scraper"
version = "0.1.0"
description = "a small program that allows you to scrape any website using natural language"
authors = ["Kyle Lau"]
license = "MIT"
readme = "README.md"
packages = [{ include = "web_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
openai = "*"
jina = "*"
markdown = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
